[package]
name = "falling-rust"
version = "0.1.0"
edition = "2021"

# Slow compilation and linking but minimal binary size
[profile.web]
inherits = "release"
opt-level = "z"
lto = true
# strip = true
# codegen-units = 1

[dependencies]
bevy = { version = "0.10.1", default-features = false, features = [
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_sprite",
    "bevy_winit",
    "bevy_asset",
    "png",
] }
bevy_egui = "0.20.2"
image = { version = "0.24.6", default-features = false, features = ["png"] }
wasm-bindgen = "0.2.84"

[dependencies.web-sys]
version = "0.3.61"
features = ['Window']

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "simulation_benchmark"
harness = false
