[package]
name = "falling-rust"
version = "0.6.0"
edition = "2021"

# Slow compilation and linking but minimal binary size
[profile.web]
inherits = "release"
opt-level = "z"
lto = true
strip = true
codegen-units = 1

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies but not for our code
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.12.0", default-features = false, features = [
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_sprite",
    "bevy_winit",
    "bevy_asset",
    "png",
] }
bevy_egui = "0.23.0"
image = { version = "0.24.7", default-features = false, features = ["png"] }

[dependencies.web-sys]
version = "0.3.64"
features = ['Window']

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "simulation_benchmark"
harness = false
